# openvins_mobile

./: .gitignore  CMakeLists.txt  README.md
example/: config.h  test_msckf.cpp
src/ov_core/init/: initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
src/ov_core/track/: TrackAruco.cpp  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp
src/ov_msckf/core/: VioManager.cpp  VioManager.h
src/ov_msckf/state/: StateHelper.cpp  StateHelper.h
src/ov_msckf/update/: UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterSLAM.cpp  UpdaterSLAM.h  UpdaterZeroVelocity.cpp  UpdaterZeroVelocity.h
src/ov_msckf/utils/: chi_square_table.cpp  chi_square_table.h
